# python_homework_2022_11

./: README.md  requirements.txt  requiremets.txt
.github/workflows/: run_tests.yml
homework_01/: main.py
homework_02/: base.py  car.py  engine.py  exceptions.py  plane.py
homework_03/: Dockerfile  README.md  main.py  pyproject.toml
homework_03/views/: ping.py
